implement reverse engineering of castling